--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -23,15 +23,21 @@
   justify-content: center;
   width: auto;
   padding-left: 25px;
-  gap: 10px;
+  gap: 25px;
 }
 
 .h-links a {
-  font-size: 15px;
+  font-size: 13px;
   font-weight: 500;
   text-decoration: none;
   color: #242424;
+  transition: transform 0.3s ease-in-out;
 }
+
+.h-links a:hover {
+  transform: scale(1.5);
+}
+
 .h-name {
   display: flex;
   align-items: center;
@@ -55,12 +61,17 @@
   justify-content: center;
   width: auto;
   padding-right: 25px;
-  gap: 10px;
+  gap: 25px;
 }
 
 .h-nav a {
-  font-size: 15px;
+  font-size: 13px;
   font-weight: 500;
   text-decoration: none;
   color: #242424;
+  transition: transform 0.3s ease-in-out;
+}
+
+.h-nav a:hover {
+  transform: scale(1.5);
 }
