--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -42,6 +42,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 50%;
 }
 
 .h-name span {
@@ -50,6 +51,9 @@
 }
 
 .h-name h1 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-style: italic;
   font-size: 24px;
   font-weight: 300;
