--- a/src/styles/products.css
+++ b/src/styles/products.css
@@ -78,3 +78,10 @@
 .p-image {
   border-radius: 10px;
 }
+
+@media (max-width: 480px) {
+  .p-container {
+    width: auto;
+    flex-direction: column;
+  }
+}
